# AIGC-Marketing-Platform

./: .env.example  .gitignore  AI_GUIDE.md  AI_GUIDE_INDEX.md  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2a0d392ab099_init_users_and_logs.py  b1f3e4c5d6a7_add_poster_tasks.py  c3f2d1a9b8e7_add_video_tasks.py
backend/app/: main.py
backend/app/api/: __init__.py  compliance.py  copywriter.py  poster.py  reviews.py  tasks.py  video.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  generation_log.py  poster_task.py  usage_log.py  user.py  video_task.py
backend/app/prompts/copywriter/: draft.md  polish.md
backend/app/prompts/reviews/: generate.md
backend/app/schemas/: __init__.py  compliance.py  copywriter.py  poster.py  reviews.py  video.py
backend/app/services/: __init__.py  copywriter.py  image_generator.py  llm_router.py  rag_retriever.py  review_generator.py  storage.py  video_script.py
backend/app/services/compliance/: __init__.py  ad_law.py  brand.py  engine.py  format.py  sensitive.py
backend/app/services/compliance/wordlists/: sensitive.txt
backend/app/workers/: __init__.py  celery_app.py  poster_worker.py  video_worker.py
backend/tests/: conftest.py  test_auth.py  test_compliance.py  test_copywriter.py  test_health.py  test_poster.py  test_review_generator.py  test_reviews.py  test_tasks.py  test_video.py  test_video_script.py  test_video_worker.py
docs/: copy_acceptance_cases.md  infra.md  plan.md  reviews_acceptance_cases.md
(+19 files in other folders)
