[project]
name = "aigc-backend"
version = "0.1.0"
description = "AIGC Marketing Platform - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "redis>=5.2",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "loguru>=0.7",
]

[tool.uv]
package = false
