[project]
name = "aigc-backend"
version = "0.1.0"
description = "AIGC Marketing Platform - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pydantic[email]>=2.9",
    "python-dotenv>=1.0",
    "redis>=5.2",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "PyJWT>=2.8",
    "bcrypt>=4.2",
    "python-multipart>=0.0.12",
    "loguru>=0.7",
    "celery[redis]>=5.4",
    "minio>=7.2",
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv]
package = false
